--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,12 +6,20 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+body {
+  width: 100%;
+  height: 100vh;
+  padding: 40px;
+}
+
 a {
   color: inherit;
   text-decoration: none;
 }
 
 * {
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
 
