--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,12 @@ body {
   padding: 40px;
 }
 
+@media screen and (max-width: 500px) {
+  body {
+    padding: 16px;
+  }
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -23,7 +29,7 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -31,4 +37,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
