--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,6 +27,7 @@ a {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 
 /* @media (prefers-color-scheme: dark) {
